# wtf-prometheus-agent

./: Cargo.toml  README.md  prometheus-rabbitmq.yaml  sample_config.toml
src/: alert.rs  bound.rs  config_file.rs  element.rs  lib.rs
