[package]
name = "wtf-prometheus-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
prometheus-parse = "0.2"
reqwest = "0.11"
chrono = "0.4.24"
toml = "0.7.6"
duration-str = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3"
tracing = "0.1"
color-eyre = "0.6"
